<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <!-- 标题 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title_name"
            android:textColor="#00f"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- 提示信息 -->

    <!--    <ScrollView-->
    <!--        android:id="@+id/scrollView_show_msg"-->
    <!--        android:layout_width="fill_parent"-->
    <!--        android:layout_height="300px"-->
    <!--        android:layout_marginLeft="1dp"-->
    <!--        android:layout_marginTop="1dp"-->
    <!--        android:layout_marginRight="1dp"-->
    <!--        android:layout_marginBottom="1dp"-->
    <!--        android:background="#0f000000"-->
    <!--        android:scrollbarStyle="outsideOverlay">-->

    <EditText
        android:id="@+id/edit_show_msg"
        android:layout_width="fill_parent"
        android:layout_height="200px"
        android:layout_gravity="center"
        android:layout_marginLeft="13dip"
        android:layout_marginRight="13dip"
        android:background="@null"
        android:clickable="true"
        android:enabled="true"
        android:focusable="false"
        android:gravity="left|center"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text=""
        android:textColor="#fff"
        android:textSize="16sp" />
    <!--    </ScrollView>-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />
    <!-- 功能区 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dip">

        <ImageView
            android:id="@+id/image_idcard"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="top"
            android:contentDescription="身份证"
            android:src="@drawable/card" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/usbRb"
                            android:checked="true"
                            android:text="usb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/serialRb"
                            android:text="串口"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ip_edit"
                        android:text="http://47.112.101.132"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_clearMsg"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickAu"
                        android:text="授权" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btn_connect"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickUsbConnect"
                        android:text="@string/btn_connect" />
                    <Button
                        android:id="@+id/btn_disconnect"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickUsbDisconnect"
                        android:text="@string/btn_disconnect" />
                    <Button
                        android:id="@+id/btn_boot"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickBoot"
                        android:text="@string/btn_boot" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_cardFullInfo"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickCardFullInfo"
                        android:text="@string/btn_cardFullInfo" />

                    <Button
                        android:id="@+id/btn_devVersion"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickDevVersion"
                        android:text="@string/btn_devVersion" />

                    <Button
                        android:id="@+id/btn_SAMId"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickSAMId"
                        android:text="@string/btn_SAMId" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_Sn"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickSN"
                        android:text="@string/btn_Sn" />

                    <Button
                        android:id="@+id/btn_chipSN"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickChipSN"
                        android:text="@string/btn_chipSN" />


                    <Button
                        android:id="@+id/btn_findCard"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickUsbgetAtr"
                        android:text="@string/btn_findCard" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btn_activeInfo"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:text="激活"
                        android:onClick="OnClickActive"/>
                    <Button
                        android:id="@+id/btn_Act_re"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:onClick="OnClickActRel"
                        android:text="解除激活" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_SAM"
                        android:visibility="gone"
                        android:inputType="number"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Sam_nor"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:checked="true"
                            android:text="12ff(正常指令)" />
                        <RadioButton
                            android:id="@+id/Sam_error"
                            android:text="12f3(异常指令)"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_SAM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:onClick="OnClickSamCommand"
                    android:text="@string/btn_SAM" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:visibility="gone"
                        android:id="@+id/edit_SAM_CARD"
                        android:inputType="number"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/SamCard_nor"
                            android:checked="true"
                            android:text="12ff(正常指令)"
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/SamCard_error"
                            android:text="12f3(异常指令)"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_SAM_CARD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:onClick="OnClickSamCardCommand"
                    android:text="@string/btn_SAM_CARD" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_APDU"
                        android:visibility="gone"
                        android:inputType="number"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/APDU1"
                            android:checked="true"
                            android:text="1234"
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/APDU2"
                            android:text="11111"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_APDU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:onClick="OnClickAPDU"
                    android:text="@string/btn_APDU" />


            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</LinearLayout>